fix: remove scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,33 +17,11 @@ a {
   box-sizing: border-box;
 }
 
-*:focus {
-  box-shadow: none !important;
-  border-color: #3390ec !important;
-}
-
-/* Scrollbar on Firefox */
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #33333350 transparent;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
-/* Scrollbar on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 0;
-  height: 6px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #d6d6d6;
-  border-radius: 1px;
-  border: 1px solid #33333350;
-}
-
-body::-webkit-scrollbar {
   display: none;
 }
